03-frontend/angular-ecommerce/src/styles.css
/* ... */
.header-mobile-2.header-mobile .hamburger .hamburger-box .hamburger-inner::after{
    background:#fff
}
.main-content.page-m{
    padding:10% 15%!important
}

/* 
 * ----------------------------
 * Products List
 * ----------------------------
 */

.product-box img {
    width: 150px;
}

.items select {
    width: 100px;
    height: 40px;
    border-radius: 40px;
    padding-left: 15px;
    margin-bottom: 10px;
    outline: 0;
    margin-left: 5px;
}
.product-box{
    margin-bottom:60px
}
.price{
    margin:15px 0 0;
    font-weight:800;
    color:#0da8e4
}
.product-box h1{
    font-size:18px;
    border-bottom:1px solid #ccc;
    padding-bottom:5px;
    font-weight:600;
    padding-top:12px;
    margin-bottom:7px
}
.product-box h2{
    font-size:15px;
    padding-bottom:0;
    font-weight:500;
    color:#585858
}

/* 
 * ----------------------------
 * Shopping Cart Checkout
 * ----------------------------
 */

.form-area{
    background:#e5e5e5;
    position:relative;
    margin-bottom:45px;
    padding:50px 20px;
    border:3px solid #ccc
}
.form-area h3{
    position:absolute;
    top:-26px;
    left:13px;
    background:#e5e5e5;
    padding:10px 20px;
    font-weight:500;
    z-index:23;
    display:inline-block
}
.input-space{
    margin-bottom:20px
}
.input-space label{
    padding-left:31px;
    font-size:14px;
    margin-bottom:50px
}
.input-space input[type=text]{
    width:100%;
    height:40px;
    border-radius:30px;
    outline:0;
    padding:10px;
    border:1px solid #ccc
}
.input-space select{
    width:100%;
    height:40px;
    border-radius:30px;
    outline:0;
    padding:0 10px;
    border:1px solid #ccc
}
.au-checkbox{
    display:block;
    position:relative;
    cursor:pointer;
    font-size:22px;
    -webkit-user-select:none;
    -moz-user-select:none;
    -ms-user-select:none;
    user-select:none
}
.au-checkbox input{
    position:absolute;
    opacity:0;
    cursor:pointer
}
.au-checkmark{
    position:absolute;
    top:0;
    left:0;
    height:22px;
    width:22px;
    background-color:#fff!important;
    border:2px solid #e5e5e5;
    -webkit-border-radius:2px;
    -moz-border-radius:2px;
    border-radius:2px
}
.au-checkbox:hover input~.au-checkmark{
    background-color:transparent
}
.au-checkbox input:checked~.au-checkmark{
    background-color:#fff
}
.au-checkmark:after{
    content:"";
    position:absolute;
    display:none
}
.au-checkbox input:checked~.au-checkmark:after{
    display:block
}
label.date{
    padding-top:8px
}
.au-checkbox .au-checkmark:after{
    left:5px;
    top:-1px;
    width:9px;
    height:15px;
    border:solid #0da8e4;
    border-width:0 4px 4px 0;
    -webkit-border-radius:2px;
    -moz-border-radius:2px;
    border-radius:2px;
    -webkit-transform:rotate(45deg);
    -moz-transform:rotate(45deg);
    -ms-transform:rotate(45deg);
    -o-transform:rotate(45deg);
    transform:rotate(45deg)
}
option:first{
    color:#ccc
}
select{
    color:#828482
}

/* 
 * ----------------------------
 * Shopping Cart Details
 * ----------------------------
 */

.table{
    margin:0
}
table.table.table-bordered{
    border:1px solid #ccc;
    background:#fff
}
.table-bordered td,.table-bordered th{
    border:1px solid #dee2e6
}
table.table.table-bordered th{
    BACKGROUND:#0da8e4;
    color:#fff;
    font-size:14px;
    padding:7px
}
.table-responsive{
    padding-right:1px
}
.items select{
    width:100px;
    height:40px;
    border-radius:40px;
    padding-left:15px;
    margin-bottom:10px;
    outline:0;
    margin-left:5px
}

/* 
 * ----------------------------
 * Product Details
 * ----------------------------
 */

 .price{
    margin:15px 0 0;
    font-weight:800;
    color:#0da8e4
}

.detail-section{
    margin-top:60px
}

.detail-img{
    width: 30%;
}
/**/

/* 
 * ----------------------------
 * Buttons
 * ----------------------------
 */

 .btn-info{
    color:#fff;
    background-color:#0da8e4!important;
    border-color:#0da8e4!important
}
a.primary-btn{
    background:#05143f;
    padding:7px 20px;
    text-align:center;
    display:inline-block;
    color:#fff;
    border-radius:2px;
    font-size:14px;
    margin-top:5px
}
a.primary-btn:hover{
    background:#0da8e4;
    color:#fff
}

.active-link {
  font-weight: bold;
}

/* 
 * ----------------------------
 * Footer section
 * ----------------------------
 */

footer ul li a{
    color:#fff
}
footer{
    background:#232324;
    z-index:1;
    position:relative;
    text-align:center
}
footer li a{
    color:#313131;
    font-weight:500
}
footer ul li{
    display:inline-block;
    font-size:14px;
    padding:10px 20px
}

/* 
 * ----------------------------
 * Media Queries
 * ----------------------------
 */

@media (max-width:1600px){
    .au-input-xl{
        min-width:290px
    }
}
@media (max-width:1315px) and (min-width:992px){
    .header-desktop3 .section-content{
        padding:0 15px
    }
}
@media (max-width:1570px) and (min-width:992px){
    .header-navbar ul li a{
        padding:25px 15px
    }
}
@media (max-width:1315px) and (min-width:992px){
    .header-navbar ul li a{
        font-size:13px;
        padding:27px 15px
    }
    .header-navbar ul li a i{
        margin-right:5px
    }
}

@media (min-width:1200px){
    .container{
        max-width:1320px
    }
}

@media (min-width:992px) and (max-width:1199px){
    .cart-area i{
        font-size:22px;
        float:left;
        margin-top:16px;
        color:#205b8d;
        margin-left:15px
    }
    .header-mobile .header-mobile-bar{
        padding:10px 0;
        background:#fff
    }
    .header-wrap .account-item>.content{
        display:none
    }
}
/* ... */

